added css file and style element in html file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="mystyle.css">
+    <style>
+        h1 {
+            color: maroon;
+            margin-left: 40px;
+        }
+    </style>
     <head>
         <title>Club Meeting Minutes </title>
     </head>
+    
     <body>
         <h1>Club Meeting Minutes</h1>
             <h2>October 3rd, 2021</h2>
@@ -17,14 +25,14 @@
                 </div>
             <h2>Attendance List</h2>
                 <h3>Sectors Present</h3>
-                    <ul>
+                    <ul class="ems">
                         <li><p><strong>President</strong> <br>Kathy Lee<p> </li>
                         <li><p><strong>Finance Chair</strong> <br>Christopher Martinez<p> </li>
                         <li><p><strong>Networking Chair</strong> <br>Rose Ross<p></li>
                         <li><p><strong>Membership Chair</strong> <br>Kelly Bailey<p></li>
                     </ul>
                 <h3>Club Members Present</h3>
-                    <ul>
+                    <ul class="ems">
                         <li>Virginia Edward</li>
                         <li>Jose Perez</li>
                         <li>Amy Bennett</li>
@@ -78,7 +86,7 @@
             <hr>
             <h2> Retreat Interest Form </h2>
                 <form action="formpage_action" method="post">
-                    <ul>
+                    <ul class="ems">
                     <li>
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="member_name">
@@ -87,7 +95,7 @@
                         <label for="mail">E-mail:</label>
                         <input type="email" id="mail" name="member_email">
                     </li>
-                    </ul>
+                    </ul class="ems">
                     <fieldset>
                         <legend>Would you be interested in going to winter retreat?</legend>
 
